--- a/CorsoMVCSolution/CorsoMVC/CorsoMVC.csproj
+++ b/CorsoMVCSolution/CorsoMVC/CorsoMVC.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\UtentiController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ArticoloController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\UtentiController.cs" />
@@ -168,10 +169,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Articolo.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ArticoloRepositoryInMemoria.cs" />
+    <Compile Include="Repository\IArticoloRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +241,8 @@
     <Content Include="Views\Utenti\NomeVariabile.cshtml" />
     <Content Include="Views\Utenti\GetPersona.cshtml" />
     <Content Include="Views\Utenti\PrimoForm.cshtml" />
+    <Content Include="Views\Articolo\Create.cshtml" />
+    <Content Include="Views\Articolo\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
