--- a/CorsoMVCSolution/CorsoMVC/CorsoMVC.csproj
+++ b/CorsoMVCSolution/CorsoMVC/CorsoMVC.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\Admin\Controllers\UtentiController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArticoloController.cs" />
+    <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\UtentiController.cs" />
@@ -170,12 +171,15 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Articolo.cs" />
+    <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ArticoloRepositoryInMemoria.cs" />
+    <Compile Include="Repository\CategoriaRepositoryInMemoria.cs" />
     <Compile Include="Repository\IArticoloRepository.cs" />
+    <Compile Include="Repository\ICategorieRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -243,6 +247,8 @@
     <Content Include="Views\Utenti\PrimoForm.cshtml" />
     <Content Include="Views\Articolo\Create.cshtml" />
     <Content Include="Views\Articolo\Index.cshtml" />
+    <Content Include="Views\Categoria\Create.cshtml" />
+    <Content Include="Views\Categoria\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
